# prism-0420

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF-TO-CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: sprint-m05.md  sprint-m06.md  sprint-m07.md  sprint-m08.md  sprint-m09.md  sprint-m10.md  sprint-m11.md  sprint-m12.md  sprint-m13.md  sprint-m14.md  sprint-m15.md  sprint-m16.md  sprint-m17.md  sprint-m18.md  sprint-m19.md  sprint-m20.md
.github/workflows/: ci.yml
_handoff/: INDEX.md  cross-sprint-punt-pool.md  m20-sprint-prompt.md  next-session.md  p22-sprint-prompt.md  p22-subslice-prompts.md  phase23-integration-cleanup-prompts.md  phase23-prompts.md  post-phase23-cleanup-plan.md  sprint-prompts-M05-M20.md
_handoff/_archive/: README.md
_handoff/dogfooding/: 00-plan.md  03-bug-queue.md  05-final-report.md  05-regression-results.md  HANDOFF-P4-CLUSTER-3-PLUS.md  progress.md
_handoff/unsunk-scan-2026-05-12/: F9-api-key-decision.md  FINAL.md  chunk_1.md  chunk_2.md  chunk_3.md  chunk_4.md  chunk_5.md  chunk_6.md  chunk_7.md  chunk_8.md  kb-baseline.txt  manifest.json
api/: cli.py  main.py
api/auth/: __init__.py  check_project_access.py  crypto.py  dependencies.py  internal.py  jwt_utils.py  password.py  tenant_filter.py
api/core/: config.py  db.py  logging.py  redis.py
app/: .gitignore  .prettierignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
design/: 00-phase-gate.md  00-roadmap.md  README.md
migrations/: env.py  helpers.py
scripts/: _unlock_e2e_admin.py  ci-lint.sh  export_openapi.py  phase3_data_collector.py  seed_dimension_types.py  seed_e2e_admin.py
tests/: _dummy_model.py  conftest.py  test_activity_log_service.py  test_auth.py  test_config.py  test_db_fixture.py  test_errors.py  test_health.py  test_logging.py  test_m01_admin.py  test_m01_bootstrap.py  test_m01_cookie_channel.py  test_m01_internal_token.py  test_m01_login.py  test_m01_logout.py  test_m01_me.py  test_m01_patch_me.py  test_m01_refresh.py  test_m01_schema_guards.py  test_m01_startup_config.py  test_m02_crypto.py  test_m02_dao.py  test_m02_models.py  test_m02_routers.py  test_m02_service.py  test_m03_dao.py  test_m03_models.py  test_m03_routers.py  test_m03_service.py  test_m04_dao.py  test_m04_models.py  test_m04_routers.py  test_m04_service.py  test_m05_dao.py  test_m05_models.py  test_m05_routers.py  test_m05_service.py  test_m06_dao.py  test_m06_models.py  test_m06_routers.py  (+64 more)
(+510 files in other folders)
